bnfc-learning/Prog/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Prog.Par where
import qualified Prog.Abs
import Prog.Lex
}

%name pPrograma Programa
%name pListDef ListDef
%name pDef Def
%name pListArg ListArg
%name pListStm ListStm
%name pArg Arg
%name pStm Stm
%name pExp15 Exp15
%name pExp14 Exp14
%name pExp13 Exp13
%name pExp12 Exp12
%name pExp11 Exp11
%name pExp9 Exp9
%name pExp8 Exp8
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp Exp
%name pExp1 Exp1
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pExp10 Exp10
%name pListExp ListExp
%name pType Type
%name pListId ListId
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '!=' { PT _ (TS _ 1) }
  '&&' { PT _ (TS _ 2) }
  '(' { PT _ (TS _ 3) }
  ')' { PT _ (TS _ 4) }
  '*' { PT _ (TS _ 5) }
  '+' { PT _ (TS _ 6) }
  '++' { PT _ (TS _ 7) }
  ',' { PT _ (TS _ 8) }
  '-' { PT _ (TS _ 9) }
  '--' { PT _ (TS _ 10) }
  '/' { PT _ (TS _ 11) }
  ';' { PT _ (TS _ 12) }
  '<' { PT _ (TS _ 13) }
  '<=' { PT _ (TS _ 14) }
  '=' { PT _ (TS _ 15) }
  '==' { PT _ (TS _ 16) }
  '>' { PT _ (TS _ 17) }
  '>=' { PT _ (TS _ 18) }
  'bool' { PT _ (TS _ 19) }
  'double' { PT _ (TS _ 20) }
  'else' { PT _ (TS _ 21) }
  'false' { PT _ (TS _ 22) }
  'if' { PT _ (TS _ 23) }
  'int' { PT _ (TS _ 24) }
  'return' { PT _ (TS _ 25) }
  'true' { PT _ (TS _ 26) }
  'void' { PT _ (TS _ 27) }
  'while' { PT _ (TS _ 28) }
  '{' { PT _ (TS _ 29) }
  '||' { PT _ (TS _ 30) }
  '}' { PT _ (TS _ 31) }
  L_integ  { PT _ (TI $$) }
  L_doubl  { PT _ (TD $$) }
  L_Id { PT _ (T_Id $$) }

%%

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

Double  :: { Double }
Double   : L_doubl  { (read ($1)) :: Double }

Id :: { Prog.Abs.Id}
Id  : L_Id { Prog.Abs.Id $1 }

Programa :: { Prog.Abs.Programa }
Programa : ListDef { Prog.Abs.PDefs $1 }

ListDef :: { [Prog.Abs.Def] }
ListDef : {- empty -} { [] } | Def ListDef { (:) $1 $2 }

Def :: { Prog.Abs.Def }
Def : Type Id '(' ListArg ')' '{' ListStm '}' { Prog.Abs.DFun $1 $2 $4 $7 }

ListArg :: { [Prog.Abs.Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }

ListStm :: { [Prog.Abs.Stm] }
ListStm : {- empty -} { [] } | Stm ListStm { (:) $1 $2 }

Arg :: { Prog.Abs.Arg }
Arg : Type Id { Prog.Abs.ADecl $1 $2 }

Stm :: { Prog.Abs.Stm }
Stm : Exp ';' { Prog.Abs.SExp $1 }
    | Type Id ';' { Prog.Abs.SDecl $1 $2 }
    | Type Id ',' ListId ';' { Prog.Abs.SDecls $1 $2 $4 }
    | Type Id '=' Exp ';' { Prog.Abs.SInit $1 $2 $4 }
    | 'return' Exp ';' { Prog.Abs.SReturn $2 }
    | 'while' '(' Exp ')' Stm { Prog.Abs.SWhile $3 $5 }
    | '{' ListStm '}' { Prog.Abs.SBlock $2 }
    | 'if' '(' Exp ')' Stm 'else' Stm { Prog.Abs.SIfElse $3 $5 $7 }

Exp15 :: { Prog.Abs.Exp }
Exp15 : Integer { Prog.Abs.EInt $1 }
      | Double { Prog.Abs.EDouble $1 }
      | 'true' { Prog.Abs.ETrue }
      | 'false' { Prog.Abs.EFalse }
      | Id { Prog.Abs.EId $1 }
      | Id '(' ListExp ')' { Prog.Abs.EApp $1 $3 }
      | '(' Exp ')' { $2 }

Exp14 :: { Prog.Abs.Exp }
Exp14 : Exp15 '++' { Prog.Abs.EPIncr $1 }
      | Exp15 '--' { Prog.Abs.EPDecr $1 }
      | Exp15 { $1 }

Exp13 :: { Prog.Abs.Exp }
Exp13 : '++' Exp14 { Prog.Abs.EIncr $2 }
      | '--' Exp14 { Prog.Abs.EDecr $2 }
      | Exp14 { $1 }

Exp12 :: { Prog.Abs.Exp }
Exp12 : Exp12 '*' Exp13 { Prog.Abs.ETimes $1 $3 }
      | Exp12 '/' Exp13 { Prog.Abs.EDiv $1 $3 }
      | Exp13 { $1 }

Exp11 :: { Prog.Abs.Exp }
Exp11 : Exp11 '+' Exp12 { Prog.Abs.EPlus $1 $3 }
      | Exp11 '-' Exp12 { Prog.Abs.EMinus $1 $3 }
      | Exp12 { $1 }

Exp9 :: { Prog.Abs.Exp }
Exp9 : Exp9 '<' Exp10 { Prog.Abs.ELt $1 $3 }
     | Exp9 '>' Exp10 { Prog.Abs.EGt $1 $3 }
     | Exp9 '<=' Exp10 { Prog.Abs.ELtEq $1 $3 }
     | Exp9 '>=' Exp10 { Prog.Abs.EGtWq $1 $3 }
     | Exp10 { $1 }

Exp8 :: { Prog.Abs.Exp }
Exp8 : Exp8 '==' Exp9 { Prog.Abs.EEq $1 $3 }
     | Exp8 '!=' Exp9 { Prog.Abs.ENEq $1 $3 }
     | Exp9 { $1 }

Exp4 :: { Prog.Abs.Exp }
Exp4 : Exp4 '&&' Exp5 { Prog.Abs.EAnd $1 $3 } | Exp5 { $1 }

Exp3 :: { Prog.Abs.Exp }
Exp3 : Exp3 '||' Exp4 { Prog.Abs.EOr $1 $3 } | Exp4 { $1 }

Exp2 :: { Prog.Abs.Exp }
Exp2 : Exp3 '=' Exp2 { Prog.Abs.EAss $1 $3 } | Exp3 { $1 }

Exp :: { Prog.Abs.Exp }
Exp : Exp1 { $1 }

Exp1 :: { Prog.Abs.Exp }
Exp1 : Exp2 { $1 }

Exp5 :: { Prog.Abs.Exp }
Exp5 : Exp6 { $1 }

Exp6 :: { Prog.Abs.Exp }
Exp6 : Exp7 { $1 }

Exp7 :: { Prog.Abs.Exp }
Exp7 : Exp8 { $1 }

Exp10 :: { Prog.Abs.Exp }
Exp10 : Exp11 { $1 }

ListExp :: { [Prog.Abs.Exp] }
ListExp : {- empty -} { [] }
        | Exp { (:[]) $1 }
        | Exp ',' ListExp { (:) $1 $3 }

Type :: { Prog.Abs.Type }
Type : 'bool' { Prog.Abs.Tbool }
     | 'double' { Prog.Abs.Tdouble }
     | 'int' { Prog.Abs.Tint }
     | 'void' { Prog.Abs.Tvoid }

ListId :: { [Prog.Abs.Id] }
ListId : {- empty -} { [] }
       | Id { (:[]) $1 }
       | Id ',' ListId { (:) $1 $3 }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
